Added OOP approach to reading csv file in patient dashboard script

--- a/patient_wise_dashboard.ipynb
+++ b/patient_wise_dashboard.ipynb
@@ -113,6 +113,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "class PatientDashboard:\n",
+    "    \n",
+    "    def read_csv(self, path):\n",
+    "        \"\"\"\n",
+    "        This method  will read a csv file and returns a dataframe\n",
+    "        args : path\n",
+    "        return : df\n",
+    "        \"\"\"\n",
+    "        df = pd.read_csv(path, header=0, delimiter=',')\n",
+    "        return df\n",
+    "    \n",
+    "    def add_total_expense_column(self, patient_discharge_df):\n",
+    "        \"\"\"\n",
+    "        This method will append 'added_amt' column that consists of sum of all the expenses incurred by a patient\n",
+    "        to the patient_discharge_df\n",
+    "        return: patient_discharge_df\n",
+    "        \"\"\"\n",
+    "        patient_discharge_df['added_amt'] = patient_discharge_df.iloc[:,11:20].sum(axis=1)\n",
+    "        return patient_discharge_df\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    patient_wise_obj = PatientDashboard()\n",
+    "    patient_discharge_df = patient_wise_obj.read_csv('clean_files/clean_patient_discharge_details_dump.csv')\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
