modified read_csv method to oop approach

--- a/department_wise_dashboard.ipynb
+++ b/department_wise_dashboard.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,15 +31,15 @@
     "\n",
     "class DepartmentDashboard:\n",
     "    \n",
-    "    def read_csv(self):\n",
+    "    def read_csv(self, path):\n",
     "        \"\"\"\n",
-    "        this method  will read clean_patient_discharge_details_dump.csv file\n",
-    "        return: patient_discharge_df\n",
+    "        This method  will read a csv file and returns a dataframe\n",
+    "        args : path\n",
+    "        return : df\n",
     "        \"\"\"\n",
-    "        patient_discharge_df = pd.read_csv('clean_files/clean_patient_discharge_details_dump.csv', \n",
-    "                                           header=0, delimiter=',')\n",
-    "        return patient_discharge_df\n",
-    "    \n",
+    "        df = pd.read_csv(path, header=0, delimiter=',')\n",
+    "        return df\n",
+    "   \n",
     "    def add_total_expense_column(self, patient_discharge_df):\n",
     "        \"\"\"\n",
     "        This method will append 'added_amt' column that consists of sum of all the expenses incurred by a patient\n",
@@ -73,7 +73,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    department_wise_obj = DepartmentDashboard()\n",
-    "    patient_discharge_df = department_wise_obj.read_csv()\n",
+    "    patient_discharge_df = department_wise_obj.read_csv('clean_files/clean_patient_discharge_details_dump.csv')\n",
     "    patient_discharge_df = department_wise_obj.add_total_expense_column(patient_discharge_df)\n",
     "    group_by_department_df = department_wise_obj.group_by_department_wise_script(patient_discharge_df)\n",
     "    department_wise_obj.write_department_wise_dashboard_csv(group_by_department_df)\n"
