Improved code in department dashboard

--- a/department_wise_dashboard.ipynb
+++ b/department_wise_dashboard.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,13 +61,12 @@
     "        \n",
     "        return group_by_department_df\n",
     "    \n",
-    "    def write_department_wise_dashboard_csv(self, group_by_department_df):\n",
+    "    def to_csv(self, group_by_department_df, path):\n",
     "        \"\"\"\n",
     "        this method  will write department_wise.csv file in dashboard_files/department directory\n",
     "        return: True\n",
     "        \"\"\"\n",
-    "        group_by_department_df.to_csv('dashboard_files/department/department_wise.csv',\n",
-    "                                    encoding='utf-8', index=False)\n",
+    "        group_by_department_df.to_csv(path, encoding='utf-8', index=False)\n",
     "        return True\n",
     "\n",
     "\n",
@@ -76,7 +75,7 @@
     "    patient_discharge_df = department_wise_obj.read_csv('clean_files/clean_patient_discharge_details_dump.csv')\n",
     "    patient_discharge_df = department_wise_obj.add_total_expense_column(patient_discharge_df)\n",
     "    group_by_department_df = department_wise_obj.group_by_department_wise_script(patient_discharge_df)\n",
-    "    department_wise_obj.write_department_wise_dashboard_csv(group_by_department_df)\n"
+    "    department_wise_obj.to_csv(group_by_department_df, 'dashboard_files/department/department_wise.csv')\n"
    ]
   },
   {
