converted KPI code to OOP approach in patient dashboard scripts

--- a/patient_wise_dashboard.ipynb
+++ b/patient_wise_dashboard.ipynb
@@ -64,15 +64,7 @@
     "\n",
     "\n",
     "# df = patient_discharge_df[['registrationno','department','patientname','added_amt']]\n",
-    "# df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# df.head(10)\n",
     "# patient_discharge_dfsort_values(by=['age'], ascending=False)\n",
     "# group_by_department = patient_discharge_df.groupby(\"department\").agg({'added_amt':'max'}).groupby(\"patientname\")\n",
     "# print(group_by_department)"
@@ -113,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,17 +124,54 @@
     "    \n",
     "    def add_total_expense_column(self, patient_discharge_df):\n",
     "        \"\"\"\n",
-    "        This method will append 'added_amt' column that consists of sum of all the expenses incurred by a patient\n",
-    "        to the patient_discharge_df\n",
+    "        This method will append 'added_amt' column that consists of sum of all the expenses incurred \n",
+    "        by a patient to the patient_discharge_df\n",
     "        return: patient_discharge_df\n",
     "        \"\"\"\n",
     "        patient_discharge_df['added_amt'] = patient_discharge_df.iloc[:,11:20].sum(axis=1)\n",
     "        return patient_discharge_df\n",
     "    \n",
+    "    def fetch_patient_phone(self, patient_discharge_df, order):\n",
+    "        \"\"\"\n",
+    "        This method with return a dataframe with the top 10 or bottom 10 patient with their phoneno\n",
+    "        based on added_amt\n",
+    "        args: patient_discharge_df, order\n",
+    "        return: result_df\n",
+    "        \"\"\"\n",
+    "        if order == \"top_10\":\n",
+    "            patient_df_largest_ten = patient_discharge_df.nlargest(10, [\"added_amt\"])\n",
+    "            result_df = patient_df_largest_ten[[\n",
+    "                \"registrationno\", \"patientname\", \"phone\", \"department\", \"added_amt\"]]\n",
+    "        elif order == \"bottom_10\":\n",
+    "            patient_df_smallest_ten = patient_discharge_df.nsmallest(10, [\"added_amt\"])\n",
+    "            result_df = patient_df_smallest_ten[[\n",
+    "                \"registrationno\", \"patientname\", \"phone\", \"department\", \"added_amt\"]]\n",
+    "        return result_df\n",
+    "        \n",
+    "      \n",
+    "    def to_csv(self, df, path):\n",
+    "        \"\"\"\n",
+    "        this method  will write csv file in dashboard_files/patient directory\n",
+    "        return: True\n",
+    "        \"\"\"\n",
+    "        df.to_csv(path, encoding='utf-8', index=False)\n",
+    "        return True\n",
+    "            \n",
+    "                \n",
     "if __name__ == '__main__':\n",
     "    patient_wise_obj = PatientDashboard()\n",
+    "    \n",
     "    patient_discharge_df = patient_wise_obj.read_csv('clean_files/clean_patient_discharge_details_dump.csv')\n",
-    " "
+    "    \n",
+    "    patient_discharge_df = patient_wise_obj.add_total_expense_column(patient_discharge_df)\n",
+    "    \n",
+    "    top_ten_added_amt_patient_df_phone = patient_wise_obj.fetch_patient_phone(\n",
+    "        patient_discharge_df, order=\"top_10\")\n",
+    "    bottom_ten_added_amt_patient_df_phone = patient_wise_obj.fetch_patient_phone(\n",
+    "        patient_discharge_df, order=\"bottom_10\")\n",
+    "    \n",
+    "    patient_wise_obj.to_csv(top_ten_added_amt_patient_df_phone, 'dashboard_files/patient/max_patient_expense_wise.csv')\n",
+    "    patient_wise_obj.to_csv(bottom_ten_added_amt_patient_df_phone, 'dashboard_files/patient/min_patient_expense_wise.csv')\n"
    ]
   },
   {
