Added method for fetching patient details based on max age with oop approach

--- a/patient_wise_dashboard.ipynb
+++ b/patient_wise_dashboard.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,20 @@
     "            result_df = patient_df_smallest_ten[[\n",
     "                \"registrationno\", \"patientname\", \"phone\", \"department\", \"added_amt\"]]\n",
     "        return result_df\n",
-    "        \n",
+    "    \n",
+    "    def fetch_patient_by_age(self, patient_discharge_df, patient_details_df):\n",
+    "        \"\"\"\n",
+    "        This method will return a dataframe with the patient details sorted by max age\n",
+    "        args: patient_discharge_df, patient_details_df\n",
+    "        returns: patient_discharge_max_age_df\n",
+    "        \"\"\"\n",
+    "        patient_discharge_df['age'] = patient_discharge_df.registrationno.map(patient_details_df.set_index(\n",
+    "            \"registrationno\")['age'])\n",
+    "        patient_discharge_max_age_df= patient_discharge_df[[\"registrationno\", \"phone\", \"patientname\",\"age\", \n",
+    "                                                            \"cityname\", \"districtname\", \"statename\", \"added_amt\"]]\n",
+    "        patient_discharge_max_age_df = patient_discharge_max_age_df.sort_values(by=['age'], ascending=False)\n",
+    "        return patient_discharge_max_age_df\n",
+    "               \n",
     "      \n",
     "    def to_csv(self, df, path):\n",
     "        \"\"\"\n",
@@ -165,13 +178,20 @@
     "    \n",
     "    patient_discharge_df = patient_wise_obj.add_total_expense_column(patient_discharge_df)\n",
     "    \n",
+    "    # Top 10 records with max added_amt\n",
     "    top_ten_added_amt_patient_df_phone = patient_wise_obj.fetch_patient_phone(\n",
     "        patient_discharge_df, order=\"top_10\")\n",
+    "    patient_wise_obj.to_csv(top_ten_added_amt_patient_df_phone, 'dashboard_files/patient/max_patient_expense_wise.csv')\n",
+    "    \n",
+    "    # Bottom 10 records with min added_amt\n",
     "    bottom_ten_added_amt_patient_df_phone = patient_wise_obj.fetch_patient_phone(\n",
     "        patient_discharge_df, order=\"bottom_10\")\n",
+    "    patient_wise_obj.to_csv(bottom_ten_added_amt_patient_df_phone, 'dashboard_files/patient/min_patient_expense_wise.csv')\n",
     "    \n",
-    "    patient_wise_obj.to_csv(top_ten_added_amt_patient_df_phone, 'dashboard_files/patient/max_patient_expense_wise.csv')\n",
-    "    patient_wise_obj.to_csv(bottom_ten_added_amt_patient_df_phone, 'dashboard_files/patient/min_patient_expense_wise.csv')\n"
+    "    # patient details ordered by max age\n",
+    "    patient_details_df = patient_wise_obj.read_csv('clean_files/clean_patient_details_dump.csv')\n",
+    "    patient_discharge_max_age_df = patient_wise_obj.fetch_patient_by_age(patient_discharge_df, patient_details_df)\n",
+    "    patient_wise_obj.to_csv(patient_discharge_max_age_df, 'dashboard_files/patient/max_age_wise.csv')"
    ]
   },
   {
